Solve button overlap problem
used flex display on css file

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,4 @@
-/** 
+/**
  * Treehouse FSJS Techdegree
  * Random Quote Generator - CSS
  */
@@ -8,15 +8,18 @@ body {
   color: white;
   font-family: 'Playfair Display', serif;
 }
-
-#quote-box {
-  position: absolute;
-  top: 20%;
-  left: 10%;
-  right: 10%;
-  width: 80%;
-  line-height: .5;
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  align-content: center;
 }
+
+.quote-box {
+  width: 80%;
+  margin-top: 20%;
+}
+
 
 .quote {
   font-size: 2.5rem;
@@ -71,13 +74,11 @@ body {
   font-style: normal;
 }
 
-#loadQuote {
-  position: fixed;
+
+.loadQuote {
+  margin-top: 10%;
   width: 12em;
-  display: inline-block;
-  left: 50%;
   margin-left: -6em;
-  bottom: 150px;
   border-radius: 4px;
   border: 2px solid #fff;
   color: #fff;
@@ -85,11 +86,11 @@ body {
   padding: 15px 0;
   transition: .5s ;
 }
-#loadQuote:hover {
+.loadQuote:hover {
   background-color: rgba(255,255,255,.25);
 }
 
-#loadQuote:focus {
+.loadQuote:focus {
   outline: none;
 }
 
